--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,3 +29,16 @@ jobs:
     #     registry: ghcr.io
     #     username: ${{ github.actor }}
     #     password: ${{ secrets.ACCESS_TOKEN }}
+    
+    # - name: SSH into VPS and Deploy
+    #   run: |
+    #     mkdir -p ~/.ssh
+    #     echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+    #     chmod 600 ~/.ssh/id_ed25519
+    #     ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+    #     ssh -i ~/.ssh/id_ed25519 ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+    #       echo "🚀 Connected to VPS"
+    #       ./deploy.sh
+    #       echo "✅ Deployment complete"
+    #     EOF
