update deploy to trigger on certain files

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,8 @@ on:
         branches:
         - main
         paths:
-        - 'server/**'
+          - 'server/**/*.go'
+          - 'server/**/*.sh'
 
 jobs:
   test-build-push:
