--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,31 @@
+version: '3.8'
+
 services:
   server:
     image: ghcr.io/gopher93185789/server:latest
     volumes:
       - certs:/etc/certs:ro
     environment:
-      - PORT=80
+      - PORT=${PORT}
+      - DSN=${DSN}
+
+      # TLS certificate paths
+      - TLS_CERT_FILE_PATH=${TLS_CERT_FILE_PATH}
+      - TLS_KEY_FILE_PATH=${TLS_KEY_FILE_PATH}
+
+      # GitHub OAuth
+      - GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
+      - GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
+      - GITHUB_REDIRECT_URL=${GITHUB_REDIRECT_URL}
+
+      # Google OAuth
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - GOOGLE_REDIRECT_URL=${GOOGLE_REDIRECT_URL}
+
+      # Security keys
+      - TOKEN_ENCRYPTION_KEY=${TOKEN_ENCRYPTION_KEY}
+      - TOKEN_SIGNING_KEY=${TOKEN_SIGNING_KEY}
     ports:
       - "443:443"
     restart: on-failure:10
