fix: Update certs volume path in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   server:
     image: ghcr.io/gopher93185789/server:latest
     volumes:
-      - certs:/etc/certs:ro
+      - certs:/app/certs:ro
     environment:
       - PORT=${PORT}
       - DSN=${DSN}
