feat: add initial Cloudflare Workers setup with Remix framework
- Added server.ts to handle requests using Remix's createRequestHandler.
- Implemented error handling for unexpected errors in the fetch event.
- Created worker-configuration.d.ts for type definitions.
- Configured wrangler.toml with project details and build command.
- Included logo-light.png for branding assets in the public directory.

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "include": [
+    "worker-configuration.d.ts",
+    "env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "**/.server/**/*.ts",
@@ -9,11 +11,14 @@
   ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": ["@remix-run/node", "vite/client"],
+    "types": [
+      "@remix-run/cloudflare",
+      "@cloudflare/workers-types",
+      "vite/client"
+    ],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "module": "ESNext",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "target": "ES2022",
@@ -26,7 +31,7 @@
       "~/*": ["./app/*"]
     },
 
-    // Vite takes care of building everything, not tsc.
+    // Remix takes care of building everything in `remix build`.
     "noEmit": true
   }
 }
