--- a/web/package.json
+++ b/web/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "web",
+  "name": "web2",
   "private": true,
   "sideEffects": false,
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
+    "deploy": "wrangler deploy",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "start": "wrangler dev",
+    "typecheck": "tsc",
+    "typegen": "wrangler types"
   },
   "dependencies": {
-    "@remix-run/node": "^2.16.7",
+    "@remix-run/cloudflare": "^2.16.7",
     "@remix-run/react": "^2.16.7",
-    "@remix-run/serve": "^2.16.7",
+    "@remix-run/server-runtime": "^2.16.7",
     "@tailwindcss/postcss": "^4.1.7",
     "isbot": "^4.1.0",
+    "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241022.0",
     "@remix-run/dev": "^2.16.7",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -33,10 +37,10 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.5.3",
     "typescript": "^5.1.6",
     "vite": "^6.0.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "3.84.0"
   },
   "engines": {
     "node": ">=20.0.0"
