--- a/web/wrangler.toml
+++ b/web/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "remix-cloudflare-workers-template"
+name = "luxora"
 
 main = "./server.ts"
 workers_dev = true
@@ -11,4 +11,4 @@ compatibility_date = "2024-09-26"
 directory = "./build/client"
 
 [build]
-command = "npm run build"
+command = "pnpm run build"
