--- a/web/package.json
+++ b/web/package.json
@@ -13,14 +13,20 @@
     "typegen": "wrangler types"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@remix-run/cloudflare": "^2.16.7",
     "@remix-run/react": "^2.16.7",
     "@remix-run/server-runtime": "^2.16.7",
     "@tailwindcss/postcss": "^4.1.7",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.511.0",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
