fix: add ALLOWED_ORIGIN environment variable to docker-compose for CORS configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       # misc
       - SCALAR_PASSWORD=${SCALAR_PASSWORD}
       - SCALAR_FILEPATH=${SCALAR_FILEPATH}
+      - ALLOWED_ORIGIN=${ALLOWED_ORIGIN}
     ports:
       - "443:443"
     restart: on-failure:10
